fixed offscreen map list

--- a/theme.css
+++ b/theme.css
@@ -92,3 +92,8 @@ div#map_zoomable > img, canvas{
   width: 100%;
   height: 100%;
 }
+
+#maplist {
+  overflow: scroll;
+  height: 60vh;
+}
